update swagger yaml for articles
